--- a/index.css
+++ b/index.css
@@ -72,3 +72,24 @@ h1{
     left: 56%;
     top: 0%;
 }
+
+@media (max-width: 1024px){
+    .hero{
+        width: 100vh;
+    }
+    .storyimg{
+        width: 500px;
+        left: 80%;
+    }
+}
+
+@media (max-width: 768px){
+    .hero{
+        width: 130vh;
+    }
+    .storyimg{
+        width: 350px;
+        left: 100%;
+        top: 100%;
+    }
+}
